--- a/index.html
+++ b/index.html
@@ -5,74 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      font-family: Verdana, Geneva, Tahoma, sans-serif;
-      font-size: large;
-    }
-
-    body {
-      width: 90vw;
-      margin: auto;
-      max-width: min-content;
-      background-color: white;
-    }
-
-    header {
-      background-color: #373d47;
-      padding: 1rem;
-      margin: auto;
-    }
-
-    section {
-      padding: 0.5rem 0rem;
-    }
-
-    article {
-      padding: 0rem 0.5rem;
-    }
-
-    aside {
-      background-color: #f3f3f3;
-
-    }
-
-    footer {
-      padding: 0.5rem;
-      width: 80vw;
-      clear: both;
-      margin: auto;
-      text-align: center;
-    }
-
-    h1 {
-      font-size: 300%;
-      padding: 0.5rem 0rem 0rem 0rem;
-      color: white;
-    }
-
-    h2 {
-      font-size: 150%;
-      padding: 0.5rem 2rem 0rem 0rem;
-    }
-
-    h3 {
-      font-size: 130%;
-      padding: 0.5rem 0rem;
-    }
-
-    li {
-      margin-left: 1rem;
-    }
-
-    hr {
-      margin: 0.5rem 0rem;
-      border: 0;
-      border-top: 2px solid #d4d6d6;
-    }
-  </style>
+  <link rel="stylesheet" href="./style.css">
   <title>Universal CV</title>
 </head>
 
